# UniSockets

./: .gitignore  BuildAndRunTests.sh  CMakeLists.txt  FDSetWrapperLin.cpp  FDSetWrapperLin.h  FDSetWrapperWin.cpp  FDSetWrapperWin.h  LICENSE  README.md  RunTests.sh  SocketWrapperLin.cpp  SocketWrapperLin.h  SocketWrapperWin.cpp  SocketWrapperWin.h  UniSocket.cpp  UniSocket.h  UniSocketException.cpp  UniSocketException.h  UniSocketSet.cpp  UniSocketSet.h  fd_setWin.cpp  fd_setWin.h  main.cpp  main.h
EchoServerExample/: CMakeLists.txt
EchoServerExample/Client/: Client.cpp
EchoServerExample/Server/: Server.cpp
SocketWrappers/Lin/: SocketWrapperLin.cpp
SocketWrappers/Win/: SocketWrapperWin.cpp
UseExample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/LibUniSockets/: CMakeLists.txt
src/LibUniSockets/include/LibUniSockets/: FDSetWrapperLin.h  FDSetWrapperWin.h  UniSocket.h  UniSocketSet.h
src/LibUniSockets/include/UniSockets/: FDSetWrapperLin.hpp  FDSetWrapperWin.hpp  ISocketWrapper.hpp  SocketWrapperLin.hpp  TestSocketWrapperWin.hpp  UniSocket.hpp  UniSocketException.hpp  UniSocketSet.hpp
src/LibUniSockets/include/UniSockets/FDSetWrappers/: FDSetWrapperLin.hpp  FDSetWrapperWin.hpp
src/LibUniSockets/include/UniSockets/SocketWrappers/: ISocketWrapper.hpp  SocketWrapperLin.hpp  SocketWrapperUni.hpp  SocketWrapperWin.hpp
src/LibUniSockets/src/: FDSetWrapperWin.cpp  SocketWrapperWin.cpp  UniServerSocket.cpp  UniSocket.cpp  UniSocketException.cpp  UniSocketSet.cpp
src/LibUniSockets/src/FDSetWrappers/: FDSetWrapperLin.cpp  FDSetWrapperWin.cpp
src/LibUniSockets/src/SocketWrappers/: SocketWrapperLin.cpp  SocketWrapperUni.cpp  SocketWrapperWin.cpp
src/include/UniSockets/: Core.hpp  UniServerSocket.hpp  UniSocket.hpp  UniSocketException.hpp
src/src/: UniSocket.cpp
test/: CMakeLists.txt
test/ACCEPT_INTERVALS_TEST/: CMakeLists.txt  accept_intervals_test.cpp
test/CONNECTION_TEST/: CMakeLists.txt  connection_tester.cpp
test/RAW_RECEIVE_TEST/: CMakeLists.txt  raw_receive_tester.cpp
test/RECEIVE_TEST/: CMakeLists.txt  receive_tester.cpp
test/RECEIVE_TIMEOUT_TEST/: CMakeLists.txt  receive_timeout_tester.cpp
test/SELECT_TEST/: CMakeLists.txt  Select_Wrapper_Test.cpp
test/STREAM_RECEIVE_TEST/: CMakeLists.txt  Stream_receive_tester.cpp
test/TestClient/: CMakeLists.txt  client.cpp
test/TestServer/: CMakeLists.txt  server.cpp
